[package]
name = "caps-sa"
version = "0.5.0"
edition = "2024"
# 1.89 stabilises the AVX-512 intrinsics (`_mm512_loadu_si512`,
# `_mm512_cmpeq_epi8_mask`) used in `src/lcp.rs::lcp_u8_avx512`. The
# build still compiles on 1.88 — only the AVX-512 LCP fast path needs
# the newer toolchain.
rust-version = "1.89"
license = "MIT"
authors = ["COMBINE-lab"]
description = "Cache-friendly, parallel, sample-sort-based suffix array construction (Rust port of CaPS-SA)"
keywords = ["suffix-array", "string", "sorting", "lcp"]
categories = ["algorithms", "data-structures"]
repository = "https://github.com/COMBINE-lab/caps-sa"
readme = "README.md"

[dependencies]
rayon = "1"
tempfile = "3"

[dev-dependencies]
rand = "0.10"

# Reproducible head-to-head against upstream C++ CaPS-SA. See `bench/`.
[[example]]
name = "caps_sa"
path = "examples/caps_sa.rs"
